--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@angular/core": "^2.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.2",
+    "angular2": "^2.0.0-beta.17",
+    "angular2-meteor": "git+https://github.com/Urigo/angular2-meteor.git",
     "meteor-node-stubs": "~0.2.0"
   }
 }
